Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35323

ER_TOO_BIG_FIELDLENGTH shows wrong maximum length for vector field

    XMLWordPrintable

Details

    • Not for Release Notes
    • Q3/2025 Maintenance

    Description

      3e03a45aa4c69e5aa76c9396547797a895a98edc

      MariaDB [test]> create or replace table t (v vector(32000));
      ERROR 1074 (42000): Column length too big for column 'v' (max = 65532); use BLOB or TEXT instead
      

      The actual maximum length is currently 16383, regardless of the table character set:

      MariaDB [test]> create or replace table t (v vector(16383));
      Query OK, 0 rows affected (0.043 sec)
       
      MariaDB [test]> create or replace table t (v vector(16384));
      ERROR 1074 (42000): Column length too big for column 'v' (max = 65532); use BLOB or TEXT instead
      

      Attachments

        Issue Links

          Activity

            People

              alessandro.vetere Alessandro Vetere
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 2d
                  2d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4h 10m Time Not Required
                  4h 10m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.