MDEV-35323: fix max vector length in error message

Fix maximum vector field length reported in ER_TOO_BIG_FIELDLENGTH.
Previously it was reported 65532, now it is corrected to 16383.
Vector field is detected by its type handler name: "vector".